# Text-Crowd

./: README.md  Utils.py  requirements.txt
Language_Crowd_Animation/: Behavior_Descriptor.py  Dataset_Generation.py  Dataset_Postprocess.py  Generation_Pipelines.py  Quantitative_Exps.py  Roadmap.py  Scenario_Generator.py  Trainer_FieldDiffusion_Full_V2_Server.py  Trainer_SgDistrDiffusion_Full_V1_Server.py
Libs/RVO2_Python/: rvo2_example.py
Libs/pyDeclutter/: CMakeLists.txt  pyDeclutter.cpp  setup.py
Libs/pyDeclutter/Collision/: BBox.cpp  BBox.h  Config.cpp  Config.h  Environment2D.cpp  Environment2D.h  Polygon2D.cpp  Polygon2D.h  VTKWriter.cpp  VTKWriter.h
Libs/pyDeclutter/Main/: mainDebugEnvironment2D.cpp  mainDebugEnvironmentDir2D.cpp  mainDebugEnvironmentSample2D.cpp  mainDebugPolygon2D.cpp
Libs/pyDeclutter/cmake/: LoadLibs.cmake
Simulators/: Field_Env.py  ORCA_Env.py
Simulators/Field_Generators/: Base_Field.py  CurveTracking_Field.py  Navigation_Field.py
Simulators/Field_Generators/vectorfield_stack/: distance_field.py  math_utils.py
Viewer/: Viewer.py
